--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ repositories {
 
 group = "org.mve"
 version = "1.0.0-Lambda"
+java.sourceCompatibility = JavaVersion.VERSION_17
+java.targetCompatibility = JavaVersion.VERSION_17
 
 dependencies {
     implementation(files("libs/jansi-2.4.1.jar"))
